font changes to rsvp form, header issue where top of header was off screen resolved

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 body{
   background-color: grey;
@@ -32,14 +34,23 @@ font-family: 'Dancing Script', cursive;
   font-family: 'Kaushan Script';
 }
 
+.lobster{
+  font-family: "Lobster";
+}
+
+.fredoka{
+  font-family: "Fredoka One";
+}
+
 nav>div>ul>li>a{
   color: whitesmoke;
 }
 
 .header{
   background: linear-gradient(45deg, rgba(98,98,101,1) 0%, rgba(221,221,232,1) 50%, rgba(98,98,101,1) 100%);
-  height: 33vh;
+  height: 50vh;
   font-size: 2.5em;
+  position: relative;
 }
 
 .storyControl{
@@ -86,6 +97,7 @@ i:hover{
     .header{
       font-size: 1.5em;
       font-weight: bold;
+      height: 33vh;
     }
 }
 
@@ -98,6 +110,7 @@ i:hover{
     .header{
       font-size: 1em;
       font-weight: bold;
+      height: 33vh;
     }
 }
 
@@ -109,6 +122,7 @@ and (orientation : portrait) {
    .header{
     font-size: 2em;
     font-weight: bold;
+    height: 33vh;
   }
 }
 
@@ -131,6 +145,7 @@ and (orientation : portrait) {
   .header{
     font-size: 3em;
     font-weight: bold;
+    height: 33vh;
   }
 }
 
